# Functional-Dimensional-Analysis-for-Engineers-Using-Haskell

./: CITATION.cff  README.md
buckingham-pi/: CHANGELOG.md  buckingham-pi.cabal
buckingham-pi-prob-prop/: CHANGELOG.md  buckingham-pi-prob-prop.cabal
buckingham-pi-prob-prop/lib/BuckinghamPiProbProp/: ProbProp.hs
buckingham-pi/app/: Main.hs
buckingham-pi/lib/BuckinghamPi/: PiTerms.hs  TextParsing.hs
