cabal-version:      3.0
name:               buckingham-pi-prob-prop
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Jaimin L Symonds Patel
maintainer:         

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  BuckinghamPiProbProp.ProbProp

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0,
                      statistics ==0.16.2.0
    
    hs-source-dirs:   lib
    default-language: Haskell2010
