cabal-version:      3.0
name:               buckingham-pi
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Jaimin L Symonds Patel
maintainer:         

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  BuckinghamPi.TextParsing,
                      BuckinghamPi.PiTerms

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0,
                      matrix ==0.3.6.1,
                      bed-and-breakfast ==0.5,
                      split ==0.2.3.5,
                      Unique ==0.4.7.9
    
    hs-source-dirs:   lib
    default-language: Haskell2010

executable buckingham-pi
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0,
        buckingham-pi

    hs-source-dirs:   app
    default-language: Haskell2010
